fixed margins and padding on homepage to get rid of white space

--- a/app/src/components/homepage/collage-custom.css
+++ b/app/src/components/homepage/collage-custom.css
@@ -2,7 +2,7 @@
   width: 705px; 
   height: 753px; 
   margin-right: 0px; 
-  margin-left: -300px; 
+  margin-left: -380px; 
   margin-top: -50px; 
 }
 
@@ -19,9 +19,9 @@
   }
 
   #collage img {
-    width: 283px; 
-    height: 322px; 
-    margin-left: 307px; 
+    width: 333px; 
+    height: 372px; 
+    margin-left: 460px;
     margin-top: -100px; 
 }
 }
