--- a/app/src/components/homepage/hero-custom.css
+++ b/app/src/components/homepage/hero-custom.css
@@ -56,10 +56,11 @@
 @media (max-width: 480px) {
   #heroheader h2 {
     font-size: 52px; 
-    margin-right: 50px;
+    margin-right: 10px;
     margin-left: -10px;
     line-height: normal; 
     margin-top: -110px; 
+    margin-bottom: 20px; 
   }
 
   #heading-subheading {
@@ -83,10 +84,11 @@
   }
 
   #lets-begin {
-    margin-top: 60px;
+    margin-top: -130px;
     width: 295px; 
     height: 45px; 
     margin-left: -10px; 
+    margin-bottom: -75px; 
   }
 
 }
