--- a/app/src/components/homepage/sticky-button.css
+++ b/app/src/components/homepage/sticky-button.css
@@ -6,6 +6,8 @@
 
 @media (max-width: 480px) {
   #stickycontainer {
+    display: flex; 
+    justify-content: center;
     position: fixed; 
     bottom: 0; 
     left: 0;
@@ -14,6 +16,7 @@
     background-color: #F5FF82;
     box-shadow: 0 -2px 10px rgba(0, 0, 0, 0.1); 
     border: 1px solid black; 
+    z-index: 1; 
   }
   
   #stickybutton {
