--- a/app/src/components/homepage/storytelling-custom.css
+++ b/app/src/components/homepage/storytelling-custom.css
@@ -20,13 +20,14 @@
 #storypjourney {
   font-size: 18px; 
   margin-top: 150px;
-  margin-right: 200px; 
+  margin-right: 0px; 
 }
 
 #storyh3 {
   font-size: 48px; 
   margin-top: 21px; 
-  margin-right: 750px; 
+  margin-right: 0px; 
+  padding-right: 300px; 
   position: relative; 
   z-index: 0;
   line-height: normal;  
@@ -34,8 +35,9 @@
 
 #storyptext {
   font-size: 18px; 
-  margin-right: 700px; 
+  margin-right: 0px; 
   margin-top: 21px; 
+  padding-right: 270px; 
   position: relative; 
   z-index: 0;
   line-height: 35px;
@@ -86,13 +88,5 @@
     font-size: 16px; 
     margin-right: 0px; 
     line-height: 27.2px; 
-  }
-
-  #storyvector {
-    width: 583px; 
-    height: 402px; 
-    margin-left: 0px; 
-    margin-top: 0px; 
-    margin-right: 0px; 
   }
 }
